src/app/concentration/components/scoreboard/scoreboard.component.scss
@import "variables";
@import "mixins";
@import "functions";

.score-board {
  padding: 0 15px;
  border-radius: .4em;
  box-shadow: 4px 4px 10px rgba(0, 0, 0, .8);

  &.double {
    $container-width: 172px;
    width: 380px;
    height: 392px;
    margin: 0 auto 1em;
    display: flex;
    justify-content: space-between;
    background: #F9E76E url(/assets/images/scoreboardbg-double.gif) no-repeat;

    h3 {
      margin: 9px 0 3px 0;
      width: 131px;
    }

    .container {
      flex: 0 0 $container-width;
      width: $container-width;
    }
  }

  &.single {

    width: 220px;
    height: 441px;
    margin: 0 auto 1em;
    background: url(/assets/images/scoreboardbg-single2.gif) no-repeat;

    .container {
      padding-top: 5px;
      width: 100%;

      &.player-0 {
        h3 {
          margin: 4px 0 3px 0;
        }

        ul {
          margin: 5px 0 0 0;
        }

        li {
          display: block;
          margin: 5px 0;
          background: #FFF;
          color: #000;
          padding: 2px 0;

          span {
            display: inline;
          }

          .marker {
            display: inline;

            &.duplicate {
              padding: 5px 0;
              margin-right: 3px;

            }
          }
        }
      }

    }
  }

  h3 {
    font-weight: 300;
    font-size: 1em;
    height: 19px;
    padding: 6px;
    text-align: center;
    text-transform: uppercase;
    background: #000;
    color: #EEE;

    &.current {
      font-weight: 600;
      color: #FFF;
    }
  }
}

.container {
  ul {
    padding: 0;
    width: 100%;
    list-style-type: none;

    li {
      display: flex;
      justify-content: flex-start;
      margin: 0 0 3px;

      overflow: hidden;

      font-weight: 600;
      font-size: .9em;
      text-align: center;
      letter-spacing: -.075em;

      cursor: pointer;
      white-space: nowrap;
      text-transform: capitalize;
      text-overflow: ellipsis;

      > span {
        display: block;
        line-height: .9;
        height: 15px;

      }

      .marker {
        flex: 0 0 20px;
        margin-right: 3px;

        &.duplicate {
          padding: 5px 0;
          background: #FFF;
          color: #000;
        }
      }

      .prize {
        flex: 1 0 auto;
        padding: 5px 2px;
        background: #FFF;
        color: #000;
        margin-right: 4px;

      }
    }
  }

  &.player-0 {
    h3 {
      margin-left: 28px;
    }

    ul {
      margin: 5px 0 0 4px;
    }
  }

  &.player-1 {
    h3 {
      margin-right: 24px;
    }

    ul {
      margin: 5px auto 0 0;
    }

    .marker {
      order: 1;
    }

    .prize {
      order: 0;
    }
  }
}

@media only screen and (max-width: 600px) {

  .score-board {
    box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);

    h3 {
      box-shadow: inset 3px 3px 6px rgba(0,0,0, .5) !important;
    }


    &.single {
      width: calc(100vw - 75px);
      height: auto;
      min-height: 80px;
      overflow: hidden;
      background: #F9E76E;

      .container {

        padding-top: 5px;
        width: 100%;

        h3 {
          margin: 4px 0 3px 0;
        }

        li {
          padding: 1px 0;
          box-shadow: inset 1px 1px 2px rgba(0,0,0, .25);
        }
      }
    }

    &.double {
      padding: 0;
      flex-direction: column;
      width: calc(100vw - 40px);
      border-radius: 0;
      height: auto;
      flex: 1 1 auto;
      min-height: 80px;
      overflow: hidden;
      background: none;

      .container {
        background: #F9E76E;
        border-radius: .4em;
        width: calc(100% - 30px);
        padding: 5px 15px;
        flex: 1 1 auto;

        ul li {
          display: block;
          box-shadow: inset 1px 1px 2px rgba(0,0,0, .25);
          background: #FFF;
          color: #000;
          padding: 5px 0;

          span {
            display: inline;
            background: none;
          }

          .marker {
            display: inline;

            &.duplicate {
              padding: 5px 0;
              margin-right: 3px;

            }
          }
        }

        //ul li > span {
        //  box-shadow: inset 1px 1px 2px rgba(0,0,0, .25);
        //  line-height: 1;
        //
        //  &.marker {
        //    padding: 5px 0;
        //  }
        //}

        &.player-0 {
          margin-bottom: 20px;

          ul {
            margin: 5px 2px 0 0;
          }
        }

        &.player-1 {
          ul {
            margin: 5px 2px 0 0;

            li {

              .marker {
                order: 0;
              }

              .prize {
                order: 1;
              }

            }
          }

        }
      }

      h3 {
        margin: 9px 0 3px 0;
        width: calc(100% - 15px);
      }
    }


  }


}

